fix svg quirk on ios safari

--- a/static/home.css
+++ b/static/home.css
@@ -135,15 +135,19 @@ summary > * {
 }
 #enterToDo,
 #toDoList button {
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
 	height: 2rem;
 	width: 2rem;
 	padding: 0.25rem;
 }
 #enterToDo {
 	margin-left: 0.5rem;
+}
+button > svg {
+	height: 100%;
+	width: 100%;
 }
 
 /* div containing buttons */
@@ -156,10 +160,6 @@ summary > * {
 }
 button {
 	padding: 0.25rem 0.5rem;
-}
-button > img {
-	height: 100%;
-	width: 100%;
 }
 dialog {
 	position: fixed;
